src/pages/QueueSortPage.scss
#queue-sort-page {
  .sort-controls {
    background: white;
    border-bottom: 1px solid #b9a2ff;
    display: flex;
    padding: 12px 0 12px;

    column-gap: 30px;

    position: sticky;
    top: 0;

    &__option {
      user-select: none;

      display: flex;
      flex-direction: column;

      input[type='text'] {
        width: 100px;
      }
    }
  }

  .queue-list {
    display: flex;

    column-gap: 30px;
    flex-wrap: wrap;
    row-gap: 35px;
  }
}

